--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,17 @@
     flex-direction: column;
     align-items: center;
 }
+
+.resultsModal {
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    background-color: lightblue;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    width: 50%;
+    text-align: center;
+}
