--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,22 @@
+body {
+    background-image: url('./assets/background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+* {
+    /* outline: 4px solid red; */
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 60%;
+    margin: auto;
+    background-color: rgba(255, 255, 255, .1);
+    backdrop-filter: blur(8px);
+    border-radius: 10px;;
 }
 
 .resultsModal {
