--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ ul {
 
 .resultsModal {
     margin: auto;
-    padding: 10px;
+    padding: 10px 10px;
     color: white;
     border: 1px solid rgba(255, 255, 255, .1);
     font-size: 16px;
@@ -40,11 +40,38 @@ ul {
     border-radius: 10px;
 }
 
+.start {
+    border: none;
+    border-radius: 10px;
+    padding: 1em;
+    width: 90%;
+    background-color: rgba(157, 198, 233, 0.516);
+    color: white;
+    font-size: 18px;
+}
+
+.fa-xmark {
+    position: relative;
+    left: 1rem;
+    bottom: .5rem;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
 .resultsModal ul {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: 100vh;
+    overflow-y: scroll;
+    margin-top: 2rem;
+}
+#location-search, .fa-magnifying-glass, .fa-circle-xmark {
+    position: relative;
+    top: 1.5rem;
 }
 [class*="result-"] {
     border: none;
@@ -88,7 +115,7 @@ ul {
     border-radius: 10px;
     color: white;
     font-size: 16px;
-    font-weight: bold;
+    /* font-weight: bold; */
     height: 90vh;
 }
 
@@ -108,7 +135,7 @@ ul {
     /* backdrop-filter: blur(.1px); */
     color: white;
     font-size: 16px;
-    font-weight: bold;
+    /* font-weight: bold; */
     text-align: center;
 }
 
@@ -125,11 +152,13 @@ ul {
     cursor: pointer;
     width: 80%;
     text-align: center;
+    position: relative;
+    left: 1.85rem;
 }
 
-[class*="magnifying-glass"] {
+.fa-magnifying-glass {
     position: relative;
-    right: 78%;
+    right: 74%;
     color: white;
     font-size: 16px;
     font-weight: bold;
@@ -138,7 +167,7 @@ ul {
 
 [class*="circle-xmark"] {
     position: relative;
-    right: 8%;
+    right: 4%;
     color: white;
     font-size: 16px;
     font-weight: bold;
