--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ ul {
     width: 40%;
     margin: auto;
     align-content: center;
-    height: 100vh;
+    height: 80vh;
 }
 
 .resultsModal {
@@ -117,12 +117,14 @@ ul {
     font-size: 16px;
     /* font-weight: bold; */
     height: 90vh;
+    overflow-y: scroll;
 }
 
-.weatherResults ul {
+/* .weatherResults ul {
     position: relative;
     bottom: 10%;
-}
+    font-size: 4rem;
+} */
 
 .weatherResults li {
     list-style: none;
@@ -172,4 +174,40 @@ ul {
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
+}
+
+.hourly {
+    border: none;
+    margin: 5px 0px;
+    padding: 5px 0px;
+    border: 1px solid rgba(255, 255, 255, .1);
+    border-radius: 10px;
+    /* background-color: rgba(255, 255, 255, .1); */
+    /* backdrop-filter: blur(.1px); */
+    color: white;
+    font-size: 16px;
+    /* font-weight: bold; */
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    position: relative;
+    overflow-x: scroll;
+    overflow-y: visible;
+    min-height: 6rem;
+}
+
+.forecast {
+    width: 80%;
+    position: relative;
+    bottom: 10%;
+    font-size: 4rem;
+}
+
+.hourly li {
+    border-left: 1px solid rgba(255, 255, 255, .1);
+    border-right: 1px solid rgba(255, 255, 255, .1);
+    border-top: none;
+    border-bottom: none;
+    border-radius: 0;
 }
