--- a/styles.css
+++ b/styles.css
@@ -228,3 +228,31 @@ ul {
     text-align: center;
     background-color: rgba(240, 248, 255, 0);
 }
+
+.wind, .humidity {
+    border: none;
+    margin: 5px 0px;
+    padding: 5px 0px;
+    border: 1px solid rgba(255, 255, 255, .1);
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    width: 48%;
+    /* position: relative; */
+    justify-content: center;
+}
+
+.windHumidityContainer {
+    position: relative;
+    bottom: 10%;
+    font-size: 4rem;
+    margin-bottom: 0;
+    margin-top: 1rem;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
